--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiosqlite>=0.22.1",
     "fastapi[standard]>=0.133.0",
+    "greenlet>=3.3.2",
     "jinja2>=3.1.6",
     "sqlalchemy>=2.0.47",
 ]
